--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "axios": "^1.7.4",
+    "bootstrap": "^5.3.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
