--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue": "^3.4.29"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
